# project

./: .gitignore  H103.ipynb  H160.ipynb  H161.ipynb  data_analyze.ipynb  dryers.ipynb  pyproject.toml
data/reference/H103/: y_test.csv
data/reference/H160/: X_test.csv  y_test.csv
data/reference/H161/: X_test.csv  y_test.csv
data/test/: H103.csv  H160.csv  H161.csv
scores/: H103.txt  H160.txt  H161.txt  scores.txt
