[tool.poetry]
name = "dryers_730"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
jupyter = "1.0"
pandas = ""
numpy  = "1.22.3"
matplotlib = "3.5.2"
seaborn  = "0.11.2"
xgboost = "1.6.1"
scikit-learn = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
